# shepp-lambda-mcp

./: CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  TOOL_DISCOVERY_PROTOCOL.md  pyproject.toml
.github/workflows/: README.md  publish-to-pypi.yml
awslabs/lambda_tool_mcp_server/: __init__.py  server.py
examples/: README.md
examples/sample_functions/: template.yml
examples/sample_functions/customer-management/: app.py
examples/sample_functions/simple-tools/: README.md  app.py
examples/sample_functions/simple-tools-mcp/: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
examples/sample_functions/simple-tools-mcp/examples/: lambda_config.json  standalone_config.json
examples/sample_functions/simple-tools-mcp/src/simple_tools_mcp/: __init__.py  lambda_handler.py  server.py  tools.py
examples/sample_functions/simple-tools-mcp/tests/: __init__.py  test_lambda_handler.py  test_tools.py
examples/sample_functions/simple-tools/events/: calculate.json  discover.json  echo.json  hello_world.json  timestamp.json
